# trading_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  gemini_system_trading_design_validation_plan.md  prefect.yaml  pyproject.toml
configs/: backtest.yaml  data_sources.yaml  llm.yaml  risk.yaml  strategies.yaml  system.yaml  tickers.yaml
docs/: architecture.md  backtest_assumptions.md  codex_news_pipeline.md  market_data_collection_spec.md  pi_extension_plan.md  strategy_spec.md
etc/: code_20260504.md  code_20260505.md
ideation/: quant_trading_codex_plan.md
reports/: daily_trading_research_report.md
scripts/: compact_dante_history.py  compact_tleading_history.py  download_samsung.py  run_backtest.py  run_features.py  run_market_data.py  run_news_summary_once.py  run_replay.py  run_report.py  run_strategies.py  validate_btc_strategy.py
shell/: com.giwooklee.trading-system.daily-news-agy.plist  run_btc_1m.sh  run_daily_news_summary_agy.sh  run_follow_dante_reading_listener.sh  run_follow_tleading_reading_listener.sh  run_trading_harness_cmux.sh
src/: api.py  app.py  backfill_manager.py  backfill_orchestrator.py  collect_daily.py  collect_daily_stock.py  collect_stock_data.py  daily_intraday_orchestrator.py  data_collector.py  data_validation.py  discord_handler.py  intraday_backfill_stock.py  intraday_collector_daemon.py  intraday_orchestrator.py  intraday_sync.py  investor_flow_collector.py  kis_auth_handler.py  kis_config.py  kis_market_handler.py  kospi200_bulk_backfill.py  kospi200_component_collector.py  kospi200_intraday_collector.py  market_bulk_backfill.py  notifier.py  (+8 more)
(+195 files in other folders)
