[project]
name = "trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "fastparquet>=2025.12.0",
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "mojito2>=0.1.6",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "perfect>=0.0.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "prefect>=3.6.24",
    "pyarrow>=22.0.0",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.9",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.41.0",
    "ty>=0.0.20",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.2",
    "ruff>=0.11.9",
]
